[ios] Always notify WebStateObservers on navigation item title change.

The short circuit skips WebStateImpl->OnTitleChanged() incorrectly on
back/forward navigation because although the title in the navigation
item doesn't need changing, the visible navigation item has changed.

This only affects navigating to native content from web content because
web state title for web content is updated separately in
|-webViewTitleDidChange|.

Bug: 864601
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ifd74f87aff0276394def154a8410b3dd1ce6c1c8
Reviewed-on: https://chromium-review.googlesource.com/1148693
Commit-Queue: Danyao Wang <danyao@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577967}
Former-commit-id: 352492fdd7794a1c7672bee0e081764a667ebd9b